@@ -1,3 +1,8 @@
+2008-09-08  Daniel Kraft  <d@domob.eu>
+
+	PR fortran/37199
+	* gfortran.dg/array_function_2.f90: New test.
+
 2008-09-09  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/37389
